--- a/homepage.html
+++ b/homepage.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="Author" content="Nia Antoine">
+        <title>Yadi-Family</title>
+        <link rel="stylesheet" href="style.css">
+      
+        <style>
+        </style>
+    </head>
+  
+    <body>
+      <header>
+        <h1>1-2-3 Family 4-5-6 Forever</h1>
+      </header>
 
+      <nav id="topNav">
+        <ul>
+          <li> <a href="homepage.html" class="split">FADED MEMORIES</a> </li>
+          <li> <a href="index.html" class="activenav">Home</a> </li>
+          <li> <a href="sup.html">About</a> </li>
+          <li> <a href="mission.html">Family/a> </li>
+          <li> <a href="about.html">Galley</a> </li>
+          <li> <a href="learn.html">Shop</a> </li>
+        </ul>
+      </nav>
+    </body>
+</html>
