Update and rename homepage.html to index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
       <nav id="topNav">
         <ul>
-          <li> <a href="homepage.html" class="split">FADED MEMORIES</a> </li>
           <li> <a href="index.html" class="activenav">Home</a> </li>
           <li> <a href="sup.html">About</a> </li>
           <li> <a href="mission.html">Family/a> </li>
@@ -27,5 +26,14 @@
           <li> <a href="learn.html">Shop</a> </li>
         </ul>
       </nav>
+
+      
+      <div class="container">
+          <img src="Hi.png" alt="pic" style="width:75%;">
+          <div class="centered">
+              <h2> Hey Guys. </h2>
+              <button>Meet the Fam</button>
+          </div>
+</div>
     </body>
 </html>
