--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="container">
           <img src="Hi.png" alt="pic" style="width:75%;">
           <div class="centered">
-              <h2> Hey Guys. </h2>
+              <h2 style="padding-top: 50px;"> Hey Guys. </h2>
               <button>Meet the Fam</button>
           </div>
 </div>
