--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="row">
         <div class="column"style="margin-left: 15%;">
           <div class="card">
-              <img src="img_avatar.png" alt="Avatar" style="width:100%">
+              <img src="Hi.png" alt="pic" style="width:100%">
               <div class="container">
                 <h4><b>John Doe</b></h4>
                 <p>Architect & Engineer</p>
@@ -51,7 +51,7 @@
         </div>
         <div class="column">
           <div class="card">
-              <img src="img_avatar.png" alt="Avatar" style="width:100%">
+              <img src="Hi.png" alt="pic" style="width:100%">
               <div class="container">
                 <h4><b>John Doe</b></h4>
                 <p>Architect & Engineer</p>
@@ -60,7 +60,7 @@
         </div>
         <div class="column">
           <div class="card">
-              <img src="img_avatar.png" alt="Avatar" style="width:100%">
+              <img src="Hi.png" alt="pic" style="width:100%">
               <div class="container">
                 <h4><b>John Doe</b></h4>
                 <p>Architect & Engineer</p>
