--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li> <a href="index.html" class="activenav">Home</a> </li>
           <li> <a href="sup.html">About</a> </li>
           <li> <a href="mission.html">Family</a> </li>
-          <li> <a href="about.html">Galley</a> </li>
+          <li> <a href="about.html">Gallery</a> </li>
           <li> <a href="learn.html">Shop</a> </li>
         </ul>
       </nav>
