--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="column"style="margin-left: 15%;">
           <div class="card">
               <img src="Hi.png" alt="pic" style="width:100%">
-              <div class="container">
+              <div class="container" style="color:black;">
                 <h4><b>John Doe</b></h4>
                 <p>Architect & Engineer</p>
               </div>
@@ -52,7 +52,7 @@
         <div class="column">
           <div class="card">
               <img src="Hi.png" alt="pic" style="width:100%">
-              <div class="container">
+              <div class="container" style="color:black;">
                 <h4><b>John Doe</b></h4>
                 <p>Architect & Engineer</p>
               </div>
@@ -61,7 +61,7 @@
         <div class="column">
           <div class="card">
               <img src="Hi.png" alt="pic" style="width:100%">
-              <div class="container">
+              <div class="container" style="color:black;">
                 <h4><b>John Doe</b></h4>
                 <p>Architect & Engineer</p>
               </div>
