--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       <h1 style="font-size: 30px;"> Upcoming Events </h1>
         
       <div class="row">
-        <div class="column"style="margin-left: 15%;">
+        <div class="column"style="margin-left: 5;">
           <div class="card">
               <img src="Hi.png" alt="pic" style="width:100%">
-              <div class="container" style="color:black;">
+              <div class="uecontainer">
                 <h4><b>John Doe</b></h4>
                 <p>Architect & Engineer</p>
               </div>
@@ -52,7 +52,7 @@
         <div class="column">
           <div class="card">
               <img src="Hi.png" alt="pic" style="width:100%">
-              <div class="container" style="color:black;">
+              <div class="uecontainer">
                 <h4><b>John Doe</b></h4>
                 <p>Architect & Engineer</p>
               </div>
@@ -61,7 +61,7 @@
         <div class="column">
           <div class="card">
               <img src="Hi.png" alt="pic" style="width:100%">
-              <div class="container" style="color:black;">
+              <div class="uecontainer">
                 <h4><b>John Doe</b></h4>
                 <p>Architect & Engineer</p>
               </div>
