--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
   
     <body>
-      <header>
+      <header style="font-size:50px; padding-top:30px;">
         <h1>1-2-3 Family 4-5-6 Forever</h1>
       </header>
 
