--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
   
     <body>
-      <header style="font-size:30px; padding-top:30px;">
+      <header style="font-size:40px; padding-top:30px;">
         <h1>1-2-3 Family 4-5-6 Forever</h1>
       </header>
 
@@ -37,7 +37,7 @@
           </div>
       </div>
 <!-- Upcoming Events --!>
-      <h1 style="font-size: 30px;"> Upcoming Events </h1>
+      <h1 style="font-size: 30px; padding:15px 0px 10px 0px;"> Upcoming Events </h1>
         
       <div class="row">
         <div class="column"style="margin-left: 5;">
