--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <h1 style="font-size: 30px; padding:15px 0px 10px 0px;"> Upcoming Events </h1>
         
       <div class="row">
-        <div class="column"style="margin-left: 5;">
+        <div class="column" style="margin-left: 10%;">
           <div class="card">
               <img src="Hi.png" alt="pic" style="width:100%">
               <div class="uecontainer">
