--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@
         </div>
      </div>
 
+<!-- Blurb Section 1 --!>
+     <div class="flex-container">
+        <div class="flex-child">
+          <h1> About Us </h1>
+          <p> A Bunch of Text Will Go Here </p>
+        </div>
+        
+        <div class="flex-child"> Flex Column 2 </div>
+    </div>
+
+
       
     </body>
 </html>
