--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
         <meta name="Author" content="Nia Antoine">
         <title>Yadi-Family</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Noto+Serif+Khojki&family=Oswald:wght@500&display=swap" rel="stylesheet">
       
         <style>
         </style>
     </head>
   
     <body>
-      <header style="font-size:35px; padding-top:30px;">
+      <header class="header">
         <h1>1-2-3 Family 4-5-6 Forever</h1>
       </header>
 
