--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="container">
           <img src="Hi.png" alt="pic" style="width:75%;">
           <div class="centered">
-              <h2 style="padding-top: 50px; color: black; font-size: 30px;"> Hey Guys. </h2>
+              <h2 class="greet"> Welcome to the Tribe </h2>
               <button>Meet the Fam</button>
           </div>
       </div>
