--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
       </div>
 <!-- Upcoming Events --!>
-      <h1 style="font-size: 30px; padding:40px 0px 10px 0px;"> Upcoming Events </h1>
+      <h1 class="upcoming"> Upcoming Events </h1>
         
       <div class="row">
         <div class="column" style="margin-left: 10%;">
