--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               </div>
           </div>
         </div>
-        <div class="column">
+        <div class="column" style="margin-left: 10%;">
           <div class="card">
               <img src="Hi.png" alt="pic" style="width:100%">
               <div class="uecontainer">
