--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
       <div class="row">
         <div class="column" style="margin-left: 10%;">
-          <div class="card" style="border-color:#162B6F; box-shadow:none;">
+          <div class="card">
               <img src="Hi.png" alt="pic" style="width:100%">
               <div class="uecontainer">
                 <h4><b>John Doe</b></h4>
