--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <!-- Navbar --!>
       <nav id="topNav">
         <ul>
-          <li> <a href="index.html" class="activenav">Home</a> </li>
+          <li> <a href="index.html" class="split">Family</a> </li>
+          <li> <a href="index.html" class="active">Home</a> </li>
           <li> <a href="sup.html">About</a> </li>
           <li> <a href="mission.html">Family</a> </li>
           <li> <a href="about.html">Gallery</a> </li>
