--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
     <body>
 <!-- Navbar --!>
-      <header class="header">
+      <header>
           <nav id="topNav">
             <ul>
               <li> <a href="index.html" class="split">Family</a> </li>
