--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h1 class="upcoming"> Upcoming Events </h1>
         
       <div class="row">
-        <div class="column" style="margin-left: 10%;">
+        <div class="column" style="margin-left: 10%; padding-right: 40px">
           <div class="card">
               <img src="Hi.png" alt="pic" style="width:100%">
               <div class="uecontainer">
